--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
-  "presets": ["env", "react"],
-  "plugins": [
-    ["import", {"libraryName": "antd","libraryDirectory":"es", "style": "css"}]
-  ]
+  "presets": ["env", "react"]
 }
+//"plugins": ["import", {"libraryName": "antd","libraryDirectory":"es", "style": "css"}]
