新增antd按需加载、webpack配置区分

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --open --hot --config=config/webpack.dev.js",
     "dev": "",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config=config/webpack.dev.js"
+    "build": "webpack --config=config/webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -38,7 +38,8 @@
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
     "antd": "^3.8.1",
