--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,6 @@
 {
-  "presets": ["env", "react"]
+  "presets": ["env", "react"],
+  "plugins": [
+    ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }]
+  ]
 }
-//"plugins": ["import", {"libraryName": "antd","libraryDirectory":"es", "style": "css"}]
